--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
 node_modules/
 .env
+.env.local
+.DS_Store
+.vscode/
+npm-debug.log*
+dist/
+coverage/
+*.log
+node_modules/
+.env
 *.log
 .DS_Store
